# rzero

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/rzero/: __init__.py  challenger.py  cli.py  curriculum.py  llm.py  loop.py  solver.py  storage.py  types.py  verifier.py
src/rzero/challengers.py/: trainable_template.py
src/rzero/domains/: arithmetic.py  code_io.py
src/rzero/solvers/: llm_codeio.py  trainable_template.py
tests/: test_arithmetic.py  test_codeio.py
